# rust-api-user

./: Cargo.toml  diesel.toml
src/: db.rs  main.rs  schema.rs
src/handlers/: users.rs
src/model/: user.rs
