[package]
name = "user"
version = "0.1.0"
authors = ["marekm1844 <marek.majdak@sufrago.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = {version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen="0.15.0"
env_logger = "0.7.1"
log = "0.4.8"


[dependencies.diesel]
version = "1.4.3"
default-features = false
features = ["r2d2","mysql", "chrono"]